--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_flavor.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_flavor.ipynb
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "id": "e70ad0a9-7042-4fe8-814b-5c586b9bee6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6b503a366de4fbfaa27133cd764cf89",
+       "model_id": "a4095da05fc44fa68654b7f5d13712cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "350dc0e4b76d4f83ba1c31818b4e4688",
+       "model_id": "435bd583cc9941b7afca1535080febb4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 10,
    "id": "224345da-f14e-4a45-bf8a-07e3ba0870dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34d26190895748799ba240ff5496ae6c",
+       "model_id": "d4dfaf571f824949bb3ecb49f0de15d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 20,
    "id": "0f8caa77-35a0-403d-af96-e5f8056ba489",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13649f5f9c334d1499382b6df9af8cbb",
+       "model_id": "68853b81424749c8a5a8c3d5796598ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,19 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 21,
    "id": "56e16540-5f4b-4d5c-8c83-d34c1217eb00",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc590fa666f64d24bb267f1d77592468",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Box(children=(Box(children=(Label(value='Existing script-languages directory', layout=Layout(border_bottom='so…"
+       "None"
       ]
      },
      "metadata": {},
@@ -174,14 +169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 22,
    "id": "7d84889f-7c3a-4f69-9bf1-c193481867af",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "381ca9801c2e4c3da7eae780bb7103fc",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "None"
+       "Box(children=(Box(children=(Label(value='Target Directory', layout=Layout(border_bottom='solid 1px', border_le…"
       ]
      },
      "metadata": {},
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 23,
    "id": "31132726-9827-4c9b-8fb8-0884d2f36e67",
    "metadata": {},
    "outputs": [
@@ -210,16 +210,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Directory '/home/jupyter/script_languages_release' already exists. Skipping cloning....\n",
       "Ready\n"
      ]
     }
    ],
    "source": [
     "from pathlib import Path\n",
-    "if use_slc_repo(ai_lab_config):\n",
+    "if clone_slc_repo(ai_lab_config):\n",
     "    from git import Repo\n",
     "    \n",
-    "    slc_dir = Path(ai_lab_config.get(\"Script-Languages-Release-Dir\"))\n",
+    "    slc_dir = Path(ai_lab_config.get(slc_target_dir_store_key))\n",
     "    if not slc_dir.is_dir():\n",
     "        print (f\"Cloning into {slc_dir}...\")\n",
     "        repo = Repo.clone_from(\"https://github.com/exasol/script-languages-release\", slc_dir)\n",
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 18,
    "id": "bb6b26b9-cb24-4b66-85c9-e15a0c92ff2c",
    "metadata": {
     "scrolled": true
@@ -249,7 +250,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a151ede22ef447c1988bb2d92f7fea09",
+       "model_id": "bb267088d6514e33bd1ea2b2ca4f4491",
        "version_major": 2,
        "version_minor": 0
       },
