--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/slc_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/slc_ui.ipynb
@@ -106,7 +106,7 @@
     "    \"\"\"\n",
     "    Creates a UI form for editing the Script-Languages-Container repository configuration.\n",
     "    \"\"\"\n",
-    "    default_target_dir = conf.get(slc_target_dir_store_key, '/home/jupyter')\n",
+    "    default_target_dir = '/home/jupyter'\n",
     "    target_dir_chooser_widget = FileChooser(path=default_target_dir, select_default=True)\n",
     "    target_dir_chooser_widget.show_only_dirs = True\n",
     "    \n",
