--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_flavor.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_flavor.ipynb
@@ -30,7 +30,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4095da05fc44fa68654b7f5d13712cc",
+       "model_id": "7f884dbc7fb341d59a09f61a4e481ddc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "435bd583cc9941b7afca1535080febb4",
+       "model_id": "bd2517c70c614851a15e7b0a232e8fbd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "224345da-f14e-4a45-bf8a-07e3ba0870dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4dfaf571f824949bb3ecb49f0de15d4",
+       "model_id": "5ffeca73bb0747dc8b1de2ecbc8edff7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "0f8caa77-35a0-403d-af96-e5f8056ba489",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68853b81424749c8a5a8c3d5796598ea",
+       "model_id": "c936ea868d684c6e811d23ee2d3e0639",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "56e16540-5f4b-4d5c-8c83-d34c1217eb00",
    "metadata": {},
    "outputs": [
@@ -169,14 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "7d84889f-7c3a-4f69-9bf1-c193481867af",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "381ca9801c2e4c3da7eae780bb7103fc",
+       "model_id": "cf962b5cf83047d48703a9633999d2dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "31132726-9827-4c9b-8fb8-0884d2f36e67",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory '/home/jupyter/script_languages_release' already exists. Skipping cloning....\n",
+      "Cloning into /home/jupyter/script_languages_release...\n",
+      "Fetching submodules...\n",
       "Ready\n"
      ]
     }
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "bb6b26b9-cb24-4b66-85c9-e15a0c92ff2c",
    "metadata": {
     "scrolled": true
@@ -250,7 +251,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb267088d6514e33bd1ea2b2ca4f4491",
+       "model_id": "d40861ff7ca846b482c92282970d045f",
        "version_major": 2,
        "version_minor": 0
       },
