--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/using_a_script_languages_container.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/using_a_script_languages_container.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 2,
    "id": "da57e77a-b41f-45e3-9a17-4b474bba898b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da078af7f81049b08d649318e6935b81",
+       "model_id": "fc292eef40b644b58c599232d512d8fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,7 +49,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14ae65ffd50441ef99a1d239cee68f04",
+       "model_id": "d5821c12ad1e48998dfb26758544fca9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 3,
    "id": "27352b75-823d-40a1-b8df-d33218fd7de6",
    "metadata": {},
    "outputs": [],
@@ -109,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 28,
    "id": "c554d698-d5a2-4f9b-846a-f606a3f183b7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0482436b4166407fb592a265a83ed2d2",
+       "model_id": "298637d19433439d805fb7b7ff08e64d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 6,
    "id": "f03723b8-2229-4e10-b801-ac074c7388cb",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "20665390-4f31-48db-ab78-249a1ef629e9",
    "metadata": {
     "scrolled": true
@@ -205,17 +205,6 @@
      "output_type": "stream",
      "text": [
       "Ready\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'prunt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m     export_result \u001b[38;5;241m=\u001b[39m exaslct_api\u001b[38;5;241m.\u001b[39mexport(flavor_path\u001b[38;5;241m=\u001b[39m(\u001b[38;5;28mstr\u001b[39m(flavor_path),), export_path\u001b[38;5;241m=\u001b[39mexport_path)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReady\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m \u001b[43mprunt\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResult: \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{export_result}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'prunt' is not defined"
      ]
     }
    ],
@@ -240,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "id": "fc142500-d855-4112-bba2-ed3395889b9b",
    "metadata": {},
    "outputs": [
@@ -276,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 17,
    "id": "423b261a-3d99-4893-95dc-224a5794c588",
    "metadata": {},
    "outputs": [
@@ -284,14 +273,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jupyter/script_languages_release/.build_output/jobs/2024_06_19_10_58_26_2_ExportContainers/logs/main.log\n",
-      "/home/jupyter/script_languages_release/.build_output/jobs/2024_06_19_10_38_46_1_ExportContainers/logs/main.log\n"
+      "/home/jupyter/script_languages_release/.build_output/jobs/2024_06_21_08_52_13_1_ExportContainers/logs/main.log\n"
      ]
     }
    ],
    "source": [
     "build_output = Path(slc_dir) / \".build_output\"\n",
-    "show_files(list(build_output.glob('**/main.log')))"
+    "main_logs = list(build_output.glob('**/main.log'))\n",
+    "show_files(main_logs)"
    ]
   },
   {
@@ -304,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 22,
    "id": "b5a816ae-1276-4649-997c-d50f0a3be991",
    "metadata": {},
    "outputs": [
@@ -312,20 +301,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-06-19 10:58:33,527 - luigi.scheduler - DEBUG - Done pruning task graph\n",
-      "2024-06-19 10:58:33,527 - luigi-interface - DEBUG - Done\n",
-      "2024-06-19 10:58:33,527 - luigi-interface - DEBUG - There are no more tasks to run at this time\n",
-      "2024-06-19 10:58:33,533 - luigi-interface - INFO - Worker Worker(salt=4698573545, workers=5, host=c402bff327cd, username=root, pid=370, sudo_user=ubuntu) was stopped. Shutting down Keep-Alive thread\n",
-      "2024-06-19 10:58:33,538 - luigi-interface - INFO - \n",
+      "2024-06-21 08:54:46,299 - luigi.scheduler - DEBUG - Done pruning task graph\n",
+      "2024-06-21 08:54:46,299 - luigi-interface - DEBUG - Done\n",
+      "2024-06-21 08:54:46,299 - luigi-interface - DEBUG - There are no more tasks to run at this time\n",
+      "2024-06-21 08:54:46,299 - luigi-interface - INFO - Worker Worker(salt=6340760915, workers=5, host=9e659425cf04, username=root, pid=369, sudo_user=ubuntu) was stopped. Shutting down Keep-Alive thread\n",
+      "2024-06-21 08:54:46,308 - luigi-interface - INFO - \n",
       "===== Luigi Execution Summary =====\n",
       "\n",
-      "Scheduled 12 tasks of which:\n",
-      "* 12 ran successfully:\n",
-      "    - 1 AnalyzeBuildDeps_9fb2953fff(job_id=2024_06_19_10_58_26_2_ExportContainers, no_cache=False, flavor_path=flavors/template-Exasol-all-python-3.10)\n",
-      "    - 1 AnalyzeBuildRun_9fb2953fff(job_id=2024_06_19_10_58_26_2_ExportContainers, no_cache=False, flavor_path=flavors/template-Exasol-all-python-3.10)\n",
-      "    - 1 AnalyzeFlavorBaseDeps_9fb2953fff(job_id=2024_06_19_10_58_26_2_ExportContainers, no_cache=False, flavor_path=flavors/template-Exasol-all-python-3.10)\n",
-      "    - 1 AnalyzeFlavorCustomization_9fb2953fff(job_id=2024_06_19_10_58_26_2_ExportContainers, no_cache=False, flavor_path=flavors/template-Exasol-all-python-3.10)\n",
-      "    - 1 AnalyzeLanguageDeps_9fb2953fff(job_id=2024_06_19_10_58_26_2_ExportContainers, no_cache=False, flavor_path=flavors/template-Exasol-all-python-3.10)\n",
+      "Scheduled 13 tasks of which:\n",
+      "* 13 ran successfully:\n",
+      "    - 1 AnalyzeBuildDeps_c91a290a4b(job_id=2024_06_21_08_52_13_1_ExportContainers, no_cache=False, flavor_path=flavors/template-Exasol-all-python-3.10)\n",
+      "    - 1 AnalyzeBuildRun_c91a290a4b(job_id=2024_06_21_08_52_13_1_ExportContainers, no_cache=False, flavor_path=flavors/template-Exasol-all-python-3.10)\n",
+      "    - 1 AnalyzeFlavorBaseDeps_c91a290a4b(job_id=2024_06_21_08_52_13_1_ExportContainers, no_cache=False, flavor_path=flavors/template-Exasol-all-python-3.10)\n",
+      "    - 1 AnalyzeFlavorCustomization_c91a290a4b(job_id=2024_06_21_08_52_13_1_ExportContainers, no_cache=False, flavor_path=flavors/template-Exasol-all-python-3.10)\n",
+      "    - 1 AnalyzeLanguageDeps_c91a290a4b(job_id=2024_06_21_08_52_13_1_ExportContainers, no_cache=False, flavor_path=flavors/template-Exasol-all-python-3.10)\n",
       "    ...\n",
       "\n",
       "This progress looks :) because there were no failed tasks or missing dependencies\n",
@@ -352,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 23,
    "id": "1aa24f25-789c-49b3-bb5e-81d49f4afa69",
    "metadata": {},
    "outputs": [
@@ -360,10 +349,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jupyter/script_languages_release/.build_output/jobs/2024_06_19_10_58_26_2_ExportContainers/logs/main.log\n",
-      "/home/jupyter/script_languages_release/.build_output/jobs/2024_06_19_10_38_46_1_ExportContainers/logs/main.log\n",
-      "/home/jupyter/script_languages_release/.build_output/jobs/2024_06_19_10_38_46_1_ExportContainers/outputs/ExportContainers_d23d451ed9/ExportFlavorContainer_5ca839d186/ExportContainerTask_aca305cb5f/logs/pack_release_file.log\n",
-      "/home/jupyter/script_languages_release/.build_output/jobs/2024_06_19_10_38_46_1_ExportContainers/outputs/ExportContainers_d23d451ed9/ExportFlavorContainer_5ca839d186/ExportContainerTask_aca305cb5f/logs/extract_release_file.log\n"
+      "/home/jupyter/script_languages_release/.build_output/jobs/2024_06_21_08_52_13_1_ExportContainers/logs/main.log\n",
+      "/home/jupyter/script_languages_release/.build_output/jobs/2024_06_21_08_52_13_1_ExportContainers/outputs/ExportContainers_b00dce99a9/ExportFlavorContainer_7133c3de64/ExportContainerTask_7214837349/logs/pack_release_file.log\n",
+      "/home/jupyter/script_languages_release/.build_output/jobs/2024_06_21_08_52_13_1_ExportContainers/outputs/ExportContainers_b00dce99a9/ExportFlavorContainer_7133c3de64/ExportContainerTask_7214837349/logs/extract_release_file.log\n",
+      "/home/jupyter/script_languages_release/.build_output/jobs/2024_06_21_08_52_13_1_ExportContainers/outputs/ExportContainers_b00dce99a9/ExportFlavorContainer_7133c3de64/DockerCreateImageTask_6ada2ecae8/DockerPullImageTask_6ada2ecae8/logs/pull_docker_db_image.log\n"
      ]
     }
    ],
@@ -399,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 24,
    "id": "11f3d8ae-d23b-4968-a5c3-a18de8f434d8",
    "metadata": {},
    "outputs": [
@@ -452,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 25,
    "id": "de268b34-99e3-4af6-a9b3-02a44e803c9f",
    "metadata": {},
    "outputs": [
@@ -480,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 27,
    "id": "28ee0a8b-dc06-41ed-b96a-f270ae4bb862",
    "metadata": {},
    "outputs": [
@@ -817,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 29,
    "id": "ce88261d-efc4-470e-a875-447a28c0125c",
    "metadata": {},
    "outputs": [
@@ -907,8 +896,6 @@
        "<span class=\"c1\"># also start a comment after the package definition.</span>\n",
        "\n",
        "<span class=\"c1\">#tensorflow-probability|0.9.0</span>\n",
-       "<span class=\"n\">xgboost</span><span class=\"err\">|</span><span class=\"n\">2</span><span class=\"p\">.</span><span class=\"n\">0</span><span class=\"p\">.</span><span class=\"n\">3</span>\n",
-       "<span class=\"n\">scikit-learn</span><span class=\"err\">|</span><span class=\"n\">1</span><span class=\"p\">.</span><span class=\"n\">5</span><span class=\"p\">.</span><span class=\"n\">0</span>\n",
        "</pre></div>\n"
       ],
       "text/latex": [
@@ -922,8 +909,6 @@
        "\\PY{c+c1}{\\PYZsh{} also start a comment after the package definition.}\n",
        "\n",
        "\\PY{c+c1}{\\PYZsh{}tensorflow\\PYZhy{}probability|0.9.0}\n",
-       "\\PY{n}{xgboost}\\PY{err}{|}\\PY{n}{2}\\PY{p}{.}\\PY{n}{0}\\PY{p}{.}\\PY{n}{3}\n",
-       "\\PY{n}{scikit\\PYZhy{}learn}\\PY{err}{|}\\PY{n}{1}\\PY{p}{.}\\PY{n}{5}\\PY{p}{.}\\PY{n}{0}\n",
        "\\end{Verbatim}\n"
       ],
       "text/plain": [
@@ -935,9 +920,7 @@
        "# If a line starts with # the whole line is a comment, however you can\n",
        "# also start a comment after the package definition.\n",
        "\n",
-       "#tensorflow-probability|0.9.0\n",
-       "xgboost|2.0.3\n",
-       "scikit-learn|1.5.0"
+       "#tensorflow-probability|0.9.0"
       ]
      },
      "metadata": {},
@@ -959,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 30,
    "id": "fe3db39f-5588-44a9-9e64-d4ec495423ee",
    "metadata": {},
    "outputs": [
@@ -1051,8 +1034,6 @@
        "<span class=\"c1\">#tensorflow-probability|0.9.0</span>\n",
        "<span class=\"n\">xgboost</span><span class=\"err\">|</span><span class=\"n\">2</span><span class=\"p\">.</span><span class=\"n\">0</span><span class=\"p\">.</span><span class=\"n\">3</span>\n",
        "<span class=\"n\">scikit-learn</span><span class=\"err\">|</span><span class=\"n\">1</span><span class=\"p\">.</span><span class=\"n\">5</span><span class=\"p\">.</span><span class=\"n\">0</span>\n",
-       "<span class=\"n\">xgboost</span><span class=\"err\">|</span><span class=\"n\">2</span><span class=\"p\">.</span><span class=\"n\">0</span><span class=\"p\">.</span><span class=\"n\">3</span>\n",
-       "<span class=\"n\">scikit-learn</span><span class=\"err\">|</span><span class=\"n\">1</span><span class=\"p\">.</span><span class=\"n\">5</span><span class=\"p\">.</span><span class=\"n\">0</span>\n",
        "</pre></div>\n"
       ],
       "text/latex": [
@@ -1068,8 +1049,6 @@
        "\\PY{c+c1}{\\PYZsh{}tensorflow\\PYZhy{}probability|0.9.0}\n",
        "\\PY{n}{xgboost}\\PY{err}{|}\\PY{n}{2}\\PY{p}{.}\\PY{n}{0}\\PY{p}{.}\\PY{n}{3}\n",
        "\\PY{n}{scikit\\PYZhy{}learn}\\PY{err}{|}\\PY{n}{1}\\PY{p}{.}\\PY{n}{5}\\PY{p}{.}\\PY{n}{0}\n",
-       "\\PY{n}{xgboost}\\PY{err}{|}\\PY{n}{2}\\PY{p}{.}\\PY{n}{0}\\PY{p}{.}\\PY{n}{3}\n",
-       "\\PY{n}{scikit\\PYZhy{}learn}\\PY{err}{|}\\PY{n}{1}\\PY{p}{.}\\PY{n}{5}\\PY{p}{.}\\PY{n}{0}\n",
        "\\end{Verbatim}\n"
       ],
       "text/plain": [
@@ -1082,8 +1061,6 @@
        "# also start a comment after the package definition.\n",
        "\n",
        "#tensorflow-probability|0.9.0\n",
-       "xgboost|2.0.3\n",
-       "scikit-learn|1.5.0\n",
        "xgboost|2.0.3\n",
        "scikit-learn|1.5.0"
       ]
@@ -1110,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "id": "2e7e9bbb-bf77-474f-949f-9521e9e3fd86",
    "metadata": {},
    "outputs": [
@@ -1118,7 +1095,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ready\n"
+      "WARNING - AnalyzeFlavorCustomization_7163885ed3(job_id=2024_06_21_09_34_30_2_ExportContainers, no_cache=False, flavor_path=flavors/template-Exasol-all-python-3.10): Image exasol/script-language-container:template-Exasol-all-python-3.10-flavor_customization_BIXW65PN6O34GMX7KLPZL2IGSKB2UIWG6BA4TXNPEVZWUJ2YGGDQ not in registry, got exception 404 Client Error for http+docker://localhost/v1.45/images/create?tag=template-Exasol-all-python-3.10-flavor_customization_BIXW65PN6O34GMX7KLPZL2IGSKB2UIWG6BA4TXNPEVZWUJ2YGGDQ&fromImage=exasol%2Fscript-language-container: Not Found (\"manifest for exasol/script-language-container:template-Exasol-all-python-3.10-flavor_customization_BIXW65PN6O34GMX7KLPZL2IGSKB2UIWG6BA4TXNPEVZWUJ2YGGDQ not found: manifest unknown: manifest unknown\")\n",
+      "WARNING - AnalyzeRelease_7163885ed3(job_id=2024_06_21_09_34_30_2_ExportContainers, no_cache=False, flavor_path=flavors/template-Exasol-all-python-3.10): Image exasol/script-language-container:template-Exasol-all-python-3.10-release_LSTTMRG6XRKQIR2ABGJEPE564HLPUM7EGMG6LQPHCTGLTUZQIYZQ not in registry, got exception 404 Client Error for http+docker://localhost/v1.45/images/create?tag=template-Exasol-all-python-3.10-release_LSTTMRG6XRKQIR2ABGJEPE564HLPUM7EGMG6LQPHCTGLTUZQIYZQ&fromImage=exasol%2Fscript-language-container: Not Found (\"manifest for exasol/script-language-container:template-Exasol-all-python-3.10-release_LSTTMRG6XRKQIR2ABGJEPE564HLPUM7EGMG6LQPHCTGLTUZQIYZQ not found: manifest unknown: manifest unknown\")\n"
      ]
     }
    ],
