--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/slc_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/slc_ui.ipynb
@@ -67,6 +67,7 @@
     "\n",
     "from ipyfilechooser import FileChooser\n",
     "\n",
+    "NOTEBOOKS_DIRECTORY = \"/home/jupyter/notebooks\"\n",
     "def clone_slc_repo(conf: Secrets) -> bool:\n",
     "    return conf.get(slc_source_store_key) == slc_source_slc_repo_option_value\n",
     "\n",
@@ -106,9 +107,10 @@
     "    \"\"\"\n",
     "    Creates a UI form for editing the Script-Languages-Container repository configuration.\n",
     "    \"\"\"\n",
-    "    default_target_dir = '/home/jupyter'\n",
+    "    default_target_dir = NOTEBOOKS_DIRECTORY\n",
     "    target_dir_chooser_widget = FileChooser(path=default_target_dir, select_default=True)\n",
     "    target_dir_chooser_widget.show_only_dirs = True\n",
+    "    target_dir_chooser_widget.sandbox_path = NOTEBOOKS_DIRECTORY\n",
     "    \n",
     "    inputs = [\n",
     "        [\n",
@@ -151,6 +153,7 @@
     "    select_default = True if slc_target_dir_store_key else False\n",
     "    src_dir_chooser_widget = FileChooser(path=default_src_dir, select_default=select_default)\n",
     "    src_dir_chooser_widget.show_only_dirs = True\n",
+    "    src_dir_chooser_widget.sandbox_path = NOTEBOOKS_DIRECTORY\n",
     "    \n",
     "    inputs = [\n",
     "        [\n",
