--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_flavor.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_flavor.ipynb
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "224345da-f14e-4a45-bf8a-07e3ba0870dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ffeca73bb0747dc8b1de2ecbc8edff7",
+       "model_id": "a61cdcc9e89242dc814755e1e4827e67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "0f8caa77-35a0-403d-af96-e5f8056ba489",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c936ea868d684c6e811d23ee2d3e0639",
+       "model_id": "a9e42e4fc483437889da729c972b6eea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,18 +140,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "56e16540-5f4b-4d5c-8c83-d34c1217eb00",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ParentPathError",
+     "evalue": "/home/jupyter/script_languages_release is not a part of /home/jupyter/notebooks",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mParentPathError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m display(\u001b[43mget_existing_slc_ui\u001b[49m\u001b[43m(\u001b[49m\u001b[43mai_lab_config\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "File \u001b[0;32m/tmp/ipykernel_388/3108480495.py:94\u001b[0m, in \u001b[0;36mget_existing_slc_ui\u001b[0;34m(conf)\u001b[0m\n\u001b[1;32m     92\u001b[0m src_dir_chooser_widget \u001b[38;5;241m=\u001b[39m FileChooser(path\u001b[38;5;241m=\u001b[39mdefault_src_dir, select_default\u001b[38;5;241m=\u001b[39mselect_default)\n\u001b[1;32m     93\u001b[0m src_dir_chooser_widget\u001b[38;5;241m.\u001b[39mshow_only_dirs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m---> 94\u001b[0m \u001b[43msrc_dir_chooser_widget\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msandbox_path\u001b[49m \u001b[38;5;241m=\u001b[39m NOTEBOOKS_DIRECTORY\n\u001b[1;32m     96\u001b[0m inputs \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m     97\u001b[0m     [\n\u001b[1;32m     98\u001b[0m         (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFlavor source directory\u001b[39m\u001b[38;5;124m'\u001b[39m, src_dir_chooser_widget, slc_target_dir_store_key),\n\u001b[1;32m     99\u001b[0m     ]\n\u001b[1;32m    100\u001b[0m ]\n\u001b[1;32m    102\u001b[0m ui_look \u001b[38;5;241m=\u001b[39m get_config_styles()\n",
+      "File \u001b[0;32m~/jupyterenv/lib/python3.10/site-packages/ipyfilechooser/filechooser.py:525\u001b[0m, in \u001b[0;36mFileChooser.sandbox_path\u001b[0;34m(self, sandbox_path)\u001b[0m\n\u001b[1;32m    523\u001b[0m \u001b[38;5;66;03m# Check if path and sandbox_path align\u001b[39;00m\n\u001b[1;32m    524\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m sandbox_path \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m has_parent_path(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_default_path, normalize_path(sandbox_path)):\n\u001b[0;32m--> 525\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ParentPathError(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_default_path, sandbox_path)\n\u001b[1;32m    527\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sandbox_path \u001b[38;5;241m=\u001b[39m normalize_path(sandbox_path) \u001b[38;5;28;01mif\u001b[39;00m sandbox_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    529\u001b[0m \u001b[38;5;66;03m# Reset the dialog\u001b[39;00m\n",
+      "\u001b[0;31mParentPathError\u001b[0m: /home/jupyter/script_languages_release is not a part of /home/jupyter/notebooks"
+     ]
     }
    ],
    "source": [
@@ -237,12 +241,12 @@
    "id": "53997bff-b4be-406f-b54f-ae9f39939ede",
    "metadata": {},
    "source": [
-    "#### Now we can select the flavor."
+    "#### Now we verify that the required flavor for the tutorial is present."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "bb6b26b9-cb24-4b66-85c9-e15a0c92ff2c",
    "metadata": {
     "scrolled": true
@@ -250,30 +254,25 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d40861ff7ca846b482c92282970d045f",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Box(children=(Box(children=(Label(value='Flavor choice', layout=Layout(border_bottom='solid 1px', border_left=…"
+       "<exasol.nb_connector.secret_store.Secrets at 0x797340435360>"
       ]
      },
+     "execution_count": 18,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "display(get_flavor_selection_ui(ai_lab_config))"
+    "flavor_base_dir = Path(slc_dir) / \"flavors\"\n",
+    "flavor_dirs =  [flavor_dir.name for flavor_dir in flavor_base_dir.iterdir() if flavor_dir.is_dir()]\n",
+    "required_flavor = \"template-Exasol-all-python-3.10\"\n",
+    "filtered_flavors = [flavor for flavor in flavor_dirs if str(flavor) == required_flavor]\n",
+    "if len(filtered_flavors) == 0:\n",
+    "    popup_message(f\"The script-languages repository at '{slc_dir}' does not contain flavor '{required_flavor}'\")\n",
+    "assert len(filtered_flavors) == 1\n",
+    "ai_lab_config.save(slc_source_flavor_store_key, str(required_flavor))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d38d5d4-91c7-4916-9431-83a5a8e3e5c5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
