--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_flavor.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_flavor.ipynb
@@ -30,7 +30,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f884dbc7fb341d59a09f61a4e481ddc",
+       "model_id": "7427d6c4c0bb419fba88537847f9b5a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd2517c70c614851a15e7b0a232e8fbd",
+       "model_id": "ada8a661bf9146dd98ac8c143cd17e5a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "224345da-f14e-4a45-bf8a-07e3ba0870dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a61cdcc9e89242dc814755e1e4827e67",
+       "model_id": "e4cdce9df3f44b65a65986ac0abc8930",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "0f8caa77-35a0-403d-af96-e5f8056ba489",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9e42e4fc483437889da729c972b6eea",
+       "model_id": "eb9971283ef74ce09a740833f2c43eb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,22 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "56e16540-5f4b-4d5c-8c83-d34c1217eb00",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ParentPathError",
-     "evalue": "/home/jupyter/script_languages_release is not a part of /home/jupyter/notebooks",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mParentPathError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m display(\u001b[43mget_existing_slc_ui\u001b[49m\u001b[43m(\u001b[49m\u001b[43mai_lab_config\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "File \u001b[0;32m/tmp/ipykernel_388/3108480495.py:94\u001b[0m, in \u001b[0;36mget_existing_slc_ui\u001b[0;34m(conf)\u001b[0m\n\u001b[1;32m     92\u001b[0m src_dir_chooser_widget \u001b[38;5;241m=\u001b[39m FileChooser(path\u001b[38;5;241m=\u001b[39mdefault_src_dir, select_default\u001b[38;5;241m=\u001b[39mselect_default)\n\u001b[1;32m     93\u001b[0m src_dir_chooser_widget\u001b[38;5;241m.\u001b[39mshow_only_dirs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m---> 94\u001b[0m \u001b[43msrc_dir_chooser_widget\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msandbox_path\u001b[49m \u001b[38;5;241m=\u001b[39m NOTEBOOKS_DIRECTORY\n\u001b[1;32m     96\u001b[0m inputs \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m     97\u001b[0m     [\n\u001b[1;32m     98\u001b[0m         (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFlavor source directory\u001b[39m\u001b[38;5;124m'\u001b[39m, src_dir_chooser_widget, slc_target_dir_store_key),\n\u001b[1;32m     99\u001b[0m     ]\n\u001b[1;32m    100\u001b[0m ]\n\u001b[1;32m    102\u001b[0m ui_look \u001b[38;5;241m=\u001b[39m get_config_styles()\n",
-      "File \u001b[0;32m~/jupyterenv/lib/python3.10/site-packages/ipyfilechooser/filechooser.py:525\u001b[0m, in \u001b[0;36mFileChooser.sandbox_path\u001b[0;34m(self, sandbox_path)\u001b[0m\n\u001b[1;32m    523\u001b[0m \u001b[38;5;66;03m# Check if path and sandbox_path align\u001b[39;00m\n\u001b[1;32m    524\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m sandbox_path \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m has_parent_path(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_default_path, normalize_path(sandbox_path)):\n\u001b[0;32m--> 525\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ParentPathError(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_default_path, sandbox_path)\n\u001b[1;32m    527\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sandbox_path \u001b[38;5;241m=\u001b[39m normalize_path(sandbox_path) \u001b[38;5;28;01mif\u001b[39;00m sandbox_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    529\u001b[0m \u001b[38;5;66;03m# Reset the dialog\u001b[39;00m\n",
-      "\u001b[0;31mParentPathError\u001b[0m: /home/jupyter/script_languages_release is not a part of /home/jupyter/notebooks"
-     ]
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -180,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf962b5cf83047d48703a9633999d2dd",
+       "model_id": "8767f342f59144a096ecb9b4741c39d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cloning into /home/jupyter/script_languages_release...\n",
+      "Cloning into /home/jupyter/notebooks/script_languages_release...\n",
       "Fetching submodules...\n",
       "Ready\n"
      ]
@@ -246,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "bb6b26b9-cb24-4b66-85c9-e15a0c92ff2c",
    "metadata": {
     "scrolled": true
@@ -255,10 +251,10 @@
     {
      "data": {
       "text/plain": [
-       "<exasol.nb_connector.secret_store.Secrets at 0x797340435360>"
+       "<exasol.nb_connector.secret_store.Secrets at 0x7ed15094dae0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,6 +269,14 @@
     "assert len(filtered_flavors) == 1\n",
     "ai_lab_config.save(slc_source_flavor_store_key, str(required_flavor))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64f9a4c4-f370-4f68-8b9b-291dcdf32125",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
