--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/file_system_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/file_system_ui.ipynb
@@ -9,17 +9,24 @@
    "source": [
     "from pathlib import Path\n",
     "from typing import List\n",
-    "from IPython.display import Code, display\n",
+    "from IPython.display import Code, display, FileLink, FileLinks\n",
+    "import os\n",
+    "\n",
+    "import os\n",
+    "import contextlib\n",
+    "from pathlib import Path\n",
     "\n",
     "def show_directory_content(p: Path, max_depth: int = 1):\n",
     "    for path in p.iterdir():\n",
-    "        print(path)\n",
+    "        if path.is_file():\n",
+    "            display(FileLink(str(os.path.relpath(path))))\n",
     "        if path.is_dir() and max_depth > 1:\n",
     "            show_directory_content(path, max_depth - 1)\n",
     "\n",
     "def show_files(paths: List[Path]):\n",
-    "    for path in paths:\n",
-    "        print(path)\n",
+    "        for path in paths:\n",
+    "            if path.is_file():\n",
+    "                display(FileLink(str(os.path.relpath(path))))\n",
     "\n",
     "def tail_file(path: Path, length: int):\n",
     "    with open(path) as f:\n",
